@@ -1,0 +1,194 @@
+<window id="3001">
+	<!-- The following property allows TvTunes to keep playing when this window is displayed -->
+	<onload condition="!IsEmpty(ListItem.TvShowTitle)">SetProperty("TvTunesSupported", "TvShows")</onload>
+	<onload condition="IsEmpty(ListItem.TvShowTitle)">SetProperty("TvTunesSupported", "Movies")</onload>
+	<onload condition="Skin.HasSetting(ActivateTvTunes) + System.HasAddon(script.tvtunes)">XBMC.RunScript(script.tvtunes,backend=True)</onload>
+	<defaultcontrol always="true">51</defaultcontrol>
+	<allowoverlay>yes</allowoverlay>
+	<controls>
+		<include>CommonItems</include>
+		<include>Arctic.ClearLogo</include>
+		<include>FadeBackgroundContentContext</include>
+		<control type="group">
+            <posx>75</posx>
+            <posy>26</posy>
+            <visible>!Skin.HasSetting(hide.viewheader) + !Window.IsActive(movieinformation) + !Window.IsActive(script-Actors-DialogInfo.xml) + !Window.IsActive(script-Actors-DialogVideoInfo.xml) + IsEmpty(Window(Home).Property(script.metadata.actors.hasparent)) + !Window.IsActive(1122) + !Window.IsActive(addoninformation) + !Window.IsActive(favourites)</visible>
+            <include>BannerListInfoAnimation</include>
+            <control type="group">
+                <control type="image">
+                    <include>ViewHeaderIconVars</include>
+                    <texture>$VAR[VideoHeaderIcon]</texture>
+                    <colordiffuse>Mod_Tags</colordiffuse>
+                </control>
+                <include>ViewHeaderSortLetter</include>
+                <control type="grouplist">
+                    <posx>110</posx>
+                    <posy>0</posy>
+                    <orientation>horizontal</orientation>
+                    <itemgap>0</itemgap>
+                    <control type="label">
+                        <width min="0" max="500">auto</width>
+                        <height>120</height>
+                        <label>$ADDON[script.videoextras 32001]</label>
+                        <font>Font-Alaska-S36-BL</font>
+                        <textcolor>Mod_Tags</textcolor>
+                        <scroll>false</scroll>
+                        <align>left</align>
+                    </control>
+                    <control type="label">
+                        <width min="0" max="500">auto</width>
+                        <height>120</height>
+                        <label>$INFO[Container.ListItem.Title,: ,]</label>
+                        <font>Font-Alaska-S36-BL</font>
+                        <textcolor>Mod_Tags</textcolor>
+                        <scroll>false</scroll>
+                        <align>left</align>
+                    </control>
+                </control>
+            </control>
+            <include>ViewHeaderItemPageInfo</include>
+        </control>
+		<control type="group">
+			<include>CommonViewAnimations</include>
+			<control type="fixedlist" id="51">
+				<posx>95</posx>
+				<posy>180</posy>
+				<width>1080</width>
+				<height>720</height>
+				<focusposition>5</focusposition>
+				<movement>6</movement>
+				<onleft>60</onleft>
+				<onright>60</onright>
+				<onup>51</onup>
+				<ondown>51</ondown>
+				<viewtype label="537">list</viewtype>
+				<pagecontrol>60</pagecontrol>
+				<scrolltime>200</scrolltime>
+				<itemlayout height="60" width="1080">
+
+					<control type="image">
+						<posx>10</posx>
+						<posy>4</posy>
+						<width>40</width>
+						<height>32</height>
+						<texture background="true">$INFO[ListItem.Thumb]</texture>
+					</control>
+					<control type="label">
+						<posx>110</posx>
+						<posy>0</posy>
+						<width>950</width>
+						<height>60</height>
+						<font>Font-Condensed-S32</font>
+						<textcolor>Mod_Tags_Dark</textcolor>
+						<align>left</align>
+						<aligny>center</aligny>
+						<label>$INFO[ListItem.Label]</label>
+					</control>
+					<control type="label">
+						<posx>1060</posx>
+						<posy>0</posy>
+						<width>950</width>
+						<height>60</height>
+						<font>Font-Alaska-S28-L</font>
+						<textcolor>Mod_Tags_Dark</textcolor>
+						<align>right</align>
+						<aligny>center</aligny>
+						<label>[COLOR=ff00dd44]‡[/COLOR]</label>
+						<visible>IntegerGreaterThan(ListItem.PlayCount,0)</visible>
+					</control>
+					<control type="label">
+						<posx>1060</posx>
+						<posy>0</posy>
+						<width>950</width>
+						<height>60</height>
+						<font>Font-Alaska-S28-L</font>
+						<textcolor>Mod_Tags_Dark</textcolor>
+						<align>right</align>
+						<aligny>center</aligny>
+						<label>[COLOR=ff888888]◑[/COLOR]</label>
+						<visible>!IntegerGreaterThan(ListItem.PlayCount,0)</visible>
+					</control>
+				</itemlayout>
+				<focusedlayout height="60" width="1080">
+					<control type="image">
+						<posx>90</posx>
+						<posy>0</posy>
+						<width>990</width>
+						<height>60</height>
+						<texture border="5">views/other/focus-mod.png</texture>
+						<visible>Control.HasFocus(51)</visible>
+						<colordiffuse>Mod_Tags_Dark</colordiffuse>
+					</control>
+					<control type="label">
+						<posx>110</posx>
+						<posy>0</posy>
+						<width>950</width>
+						<height>60</height>
+						<font>Font-Condensed-S32-B</font>
+						<textcolor>Mod_Tags_Alt</textcolor>
+						<align>left</align>
+						<aligny>center</aligny>
+						<label>$INFO[ListItem.Label]</label>
+						<visible>Control.HasFocus(51)</visible>
+					</control>
+					<control type="label">
+						<posx>110</posx>
+						<posy>0</posy>
+						<width>950</width>
+						<height>60</height>
+						<font>Font-Condensed-S32-B</font>
+						<textcolor>Mod_Tags_Dark</textcolor>
+						<selectedcolor>selected</selectedcolor>
+						<align>left</align>
+						<aligny>center</aligny>
+						<label>$INFO[ListItem.Label]</label>
+						<visible>!Control.HasFocus(51)</visible>
+					</control>
+					<control type="label">
+						<posx>1060</posx>
+						<posy>0</posy>
+						<width>950</width>
+						<height>60</height>
+						<font>Font-Alaska-S28-L</font>
+						<textcolor>Mod_Tags_Dark</textcolor>
+						<align>right</align>
+						<aligny>center</aligny>
+						<label>[COLOR=ff00dd44]‡[/COLOR]</label>
+						<visible>IntegerGreaterThan(ListItem.PlayCount,0)</visible>
+					</control>
+					<control type="label">
+						<posx>1060</posx>
+						<posy>0</posy>
+						<width>950</width>
+						<height>60</height>
+						<font>Font-Alaska-S28-L</font>
+						<textcolor>Mod_Tags_Dark</textcolor>
+						<align>right</align>
+						<aligny>center</aligny>
+						<label>[COLOR=ff888888]◑[/COLOR]</label>
+						<visible>!IntegerGreaterThan(ListItem.PlayCount,0)</visible>
+					</control>
+				</focusedlayout>
+			</control>
+			<control type="scrollbar" id="60">
+				<posx>1170</posx>
+				<posy>80</posy>
+				<width>25</width>
+				<height>550</height>
+				<texturesliderbackground border="0,14,0,14">ScrollBarV.png</texturesliderbackground>
+				<texturesliderbar border="0,14,0,14">ScrollBarV_bar.png</texturesliderbar>
+				<texturesliderbarfocus border="0,14,0,14">ScrollBarV_bar_focus.png</texturesliderbarfocus>
+				<textureslidernib>ScrollBarNib.png</textureslidernib>
+				<textureslidernibfocus>ScrollBarNib.png</textureslidernibfocus>
+				<onleft>51</onleft>
+				<onright>51</onright>
+				<showonepage>false</showonepage>
+				<orientation>vertical</orientation>
+				<visible>Control.IsVisible(51)</visible>
+			</control>
+		</control>
+
+		<include>FadeBackground</include>
+        <include>Common-Info</include>
+	</controls>
+</window>
